recursion.lessons.recursion.koch.Koch.scala.error
Koch:13: error: type mismatch;
 found   : Double
 required: Int
	var long:Int=length
                     ^Koch:14: error: type mismatch;
 found   : Double
 required: Int
	if (levels>=1) {long=length/3*levels}
                                     ^